force-app/main/default/objects/User_Survey_Answers__c/User_Survey_Answers__c.object-meta.xml
<CustomObject>
    <label>User Survey Answers</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>User Survey Answers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>