force-app/main/default/objects/User_Survey_Answers__c/fields/IsIdentified__c.field-meta.xml
<CustomField>
    <fullName>IsIdentified__c</fullName>
    <formula>User_Survey__r.IsIdentified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsIdentified ?</label>
    <type>Checkbox</type>
</CustomField>