force-app/main/default/objects/User_Survey_Answers__c/fields/Survey_Available_Option__c.field-meta.xml
<CustomField>
    <fullName>Survey_Available_Option__c</fullName>
    <label>Survey Available Option</label>
    <referenceTo>Survey_Available_Option__c</referenceTo>
    <relationshipLabel>User Survey Answers</relationshipLabel>
    <relationshipName>User_Survey_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>