force-app/main/default/objects/User_Survey_Answers__c/fields/User_Survey__c.field-meta.xml
<CustomField>
    <fullName>User_Survey__c</fullName>
    <label>User Survey</label>
    <referenceTo>User_Survey__c</referenceTo>
    <relationshipLabel>User Survey Answers</relationshipLabel>
    <relationshipName>User_Survey_Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>